# lolacip-py-sdk

./: README.md  pyproject.toml  requirements.txt
lolacippy/: __init__.py  init_assitant.py  lola_cip_steps.py  messages_config.py
lolacippy/cip/: cip_Bussines_Rules.py  cip_Utils.py  cip_messages_config.py
lolacippy/onEvents/: on_command.py  on_image_message.py  on_new_conversation.py  on_notification.py  util_events.py
