[project]
name = "lolacippy"
version = "0.0.1"
authors = [
  { name="Jorge Trujillo", email="jorge@leapfinancial.com" },
]
description = "This project is a Python SDK for the lola kraken API. It is intended to be used by developers who want to integrate Lola into their own applications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'schedule>=1.2.0',  
  'requests>=2.27.1',
  'pydantic>=2.4.2',
  'lolakrakenpy @ git+https://github.com/leapfinancial/Lolav2Kraken-py-sdk@dev',
  'lolapy @ git+https://github.com/alejamp/lola-py-sdk'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.urls]
"Homepage" = "https://github.com/alejamp/lola-py-sdk/"
"Bug Tracker" = "https://github.com/alejamp/lola-py-sdk/issues"